--- a/purdue/stat656-fall2024/homework3/hw3.rmd
+++ b/purdue/stat656-fall2024/homework3/hw3.rmd
@@ -5,10 +5,19 @@ title: |
     | **Homework 3**
 author: "Juanwu Lu^[College of Engineering, Purdue University, West Lafayette, IN, USA]"
 description: "Homework 2 for STAT 656 at Purdue University"
-output: pdf_document
+output:
+    pdf_document: default
 fig_width: 6
 fig_height: 4
 ---
+
+```{r setup, include=FALSE}
+library(bayesplot)
+library(ggplot2)
+library(moments)
+library(rstan)
+bayesplot_theme_set(theme_default(base_size = 12, base_family = "sans"))
+```
 
 # Gibbs Sampling for Normal Hierarchical Models
 
@@ -16,9 +25,9 @@ fig_height: 4
 
 # The Stroop Effect
 
-Consider a psychological task where subjects are presented with a word at the center of a computer screen (`'red'`, `'blue'`, or `'green'`). Further, the word is colored either red, blue or green. In some trials, the word matches the color of the text ('congruent' condition); otherwise they do not match ('incongruent' condition, *e.g., the word is `'red'` but it is colored blue*). Subjects are told to focus only on the color that the word is written in, and press $1$ if the color is red, $2$ if it is blue, and $3$ if it is green. In each case, the experimenter measures the reaction time (*i.e., how long it takes them to press the correct button*). The STrrop effect is a robust effect in psychology where the reaction tim ein the incongruent condition is on average **larger** than in the congruent condition.
+Consider a psychological task where subjects are presented with a word at the center of a computer screen (`'red'`, `'blue'`, or `'green'`). Further, the word is colored either red, blue or green. In some trials, the word matches the color of the text ('congruent' condition); otherwise they do not match ('incongruent' condition, *e.g., the word is `'red'` but it is colored blue*). Subjects are told to focus only on the color that the word is written in, and press $1$ if the color is red, $2$ if it is blue, and $3$ if it is green. In each case, the experimenter measures the reaction time (*i.e., how long it takes them to press the correct button*). The Stroop effect is a robust effect in psychology where the reaction time in the incongruent condition is on average **larger** than in the congruent condition.
 
-Your task is t use the data in `stroop_data.csv` to verify if this is the case. The data measures multiple reactions times of different subjects in congruent and incongruent settings. You will model this with a hierarchical Bayeisan model, with the goal of determining:
+Your task is to use the data in `stroop_data.csv` to verify if this is the case. The data measures multiple reactions times of different subjects in congruent and incongruent settings. You will model this with a hierarchical Bayeisan model, with the goal of determining:
 
 * how much longer reaction times are for each color in incongruent vs congruent cases, and whether this difference is significant.
 * how different the effect is for each color, and whether these differences are significant.
@@ -28,6 +37,74 @@ Your model should account for the fact that
 
 * each response of each individual involves random fluctuations
 * reaction times and the manitude of the Stroop effect can be different for different individuals
-* reaction times and the magnitude of the Strrop effect can be different for different colors (*e.g., it might be smaller for red where you have to press $1$ vs others*)
+* reaction times and the magnitude of the Stroop effect can be different for different colors (*e.g., it might be smaller for red where you have to press $1$ vs others*)
 
-Your hierarchical model should allow statistical sharing among individuals and possibly among different colors. Justifyyour model and prior choices, implement it in `Stan` and sicusss your findings, being sure to include visualizations and predictive checks of model fit. You must present your final results in a form that can be readily understood by a general audience.
+Your hierarchical model should allow statistical sharing among individuals and possibly among different colors. Justify your model and prior choices, implement it in `Stan` and sicusss your findings, being sure to include visualizations and predictive checks of model fit. You must present your final results in a form that can be readily understood by a general audience.
+
+**Solution**:
+
+```{r read-stroop-data}
+# Read the data
+if (file.exists("data/stroop_dataset.csv")) {
+    data <- read.csv("data/stroop_dataset.csv", header = TRUE, row.names = 1)
+} else {
+    stop("FileNotFound: data file not found at 'data/stroop_dataset.csv'.")
+}
+head(data)
+```
+
+First we take a look at the distribution of reaction time over all subjects and trials. The following histogram shows that reaction time has a support of all positive real numbers, with a right-skewed long-tailed distribution. Therefore, we can model reaction time with a log-normal distribution.
+```{r plot-rt-distribution}
+ggplot(data, aes(x = RT)) +
+    geom_histogram(aes(y= after_stat(density)), bins = 100, fill = "lightblue") +
+    labs(title = "Histogram of Reaction Time", x = "Reaction Time (ms)", y = "Frequency") +
+    geom_density()
+```
+
+According to the problem description, we have three colors and three words. Without loss of generality, we can represent them as discrete random variables. Then we obtain a binary indicator to represent the congruence of the word and the color. In this formulation, we introduce means for congruent and incongruent conditions, where both of them follow a log-normal distribution. In the distribution of the reaction time, we activate either one of them based on the binary congruence indicator. Finally, we pose standard Gamma priors on the standard deviations in the log-normal distribution of reaction time.
+
+```{r build-stan-model}
+hierarchical_model_code <- "
+    data {
+        int<lower=0> n;                 // number of subjects
+        int<lower=0> t;                 // number of trials
+        real<lower=0> pr_std;           // Prior standard deviation of means
+        vector[n * t] color;            // Color of the word in each trial
+        vector[n * t] word;             // Word in each trial
+        array[n * t] int<lower=0> y;    // Reaction time
+    }
+
+    parameters {
+        vector<lower=0>[n] std;    // Emission standard deviation
+        vector[n] mu_congruent;    // Mean reaction time for congruent condition
+        vector[n] mu_incongruent;  // Mean reaction time for incongruent condition
+    }
+
+    transformed parameters {
+        vector[n*t] congruent;   // Binary indicator for congruency
+        for (i in 1:n*t) {
+            congruent[i] = (color[i] == word[i]);
+        }
+        vector[n*t] mu;
+        for (i in 1:n*t) {
+            mu[i] = mu_congruent[i] * congruent[i] + mu_incongruent[i] * (1 - congruent[i]);
+        }
+    }
+
+    model {
+        mu_congruent ~ lognormal(0, pr_std);
+        mu_incongruent ~ lognormal(0, pr_std);
+        std ~ gamma(1, 1);
+        y ~ lognormal(mu, std);
+    }
+
+    generated quantities {
+        array[n*t] real y_hat;
+        y_hat = lognormal_rng(mu, std);
+    }
+"
+hierarchical_model <- stan_model(
+    model_name = "stroop_hierarchical",
+    model_code = hierarchical_model_code
+)
+```
